@@ -10,7 +10,6 @@ inc/Module/Install/WriteAll.pm
 lib/MetaTrans.pm
 lib/MetaTrans/Base.pm
 lib/MetaTrans/Languages.pm
-lib/MetaTrans/SlovnikZcuCz.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
@@ -23,10 +22,6 @@ t/MetaTrans-Languages/00-use.t
 t/MetaTrans-Languages/01-version.t
 t/MetaTrans-Languages/02-pod_coverage.t
 t/MetaTrans-Languages/03-pod.t
-t/MetaTrans-SlovnikZcuCz/00-use.t
-t/MetaTrans-SlovnikZcuCz/01-version.t
-t/MetaTrans-SlovnikZcuCz/02-pod_coverage.t
-t/MetaTrans-SlovnikZcuCz/03-pod.t
 t/MetaTrans/00-use.t
 t/MetaTrans/01-version.t
 t/MetaTrans/02-pod_coverage.t
